--- a/index.html
+++ b/index.html
@@ -7,16 +7,45 @@
     <title>Hatice İKKAN</title>
     <h1>HATİCE İKKAN</h1>
 </head>
-<body>
+    <body>
         <!--Hakkımda-->
         <h2>Hakkımda</h2>
-        <p> Merhaba. Ben Hatice. Sakarya Üniversitesi Bilişim Sistemleri Mühendisliği bölümünü okudum. İşletme ve Yazılım olarak 2 tane stajımı başarılı bir şekilde zamanında tamamladım. </p> 
-        <p> Yeni mezun, genç, dinamik, öğrenmeye hevesli ve Agile çalışma prensiplerini bilen Bilişim Sistemleri Mühendisiyim. Web yazılımları alanında kendimi geliştirecek bir şirkette çalışmayı planlıyorum. </p>
+        <p> Merhaba. Ben Hatice. Sakarya Üniversitesi Bilişim Sistemleri Mühendisliği bölümünü okudum. İşletme ve Yazılım olarak 2 tane stajımı başarılı bir şekilde zamanında tamamladım. Yeni mezun, genç, dinamik, öğrenmeye hevesli ve Agile çalışma prensiplerini bilen Bilişim Sistemleri Mühendisiyim. Web yazılımları alanında kendimi geliştirecek bir şirkette çalışmayı planlıyorum. </p>
+    
+        <h2>İlgi Alanlarım</h2>
+       <!-- İlgi Alanlarım Listesi (ol>li*3>ul>li*3) -->
+        <ol>
+            <li>
+                Diziler
+                <ul type="disc">
+                    <a target="_blank" href="https://www.dizigom.tv/my-name-1-sezon-1-bolum-hd1/"><li> My Name </li></a>
+                    <li>Iris 2</li>
+                    <li>Poseidon</li>
+                </ul>
+            </li>
+            <li>
+                Filmler
+                <ul type="disc">
+                    <a target="_blank" href="https://webteizle.one/izle/altyazi/chennai-express"><li> Chennai Express </li></a>
+                    <li>Happy New Year</li>
+                    <li>Dilwale</li>
+                </ul>
+            </li>
+            <li>
+               Kitaplar
+                <ul type="disc">
+                    <a target="_blank" href="https://ekitapbulindir.aynitap.com/kitap/aklin-yeni-sinirlari/"><li> Aklın Yeni Sınırları </li></a>
+                    <li>Bolluk Paradoksu</li>
+                    <li>Zengin Baba Yoksul Baba</li>
+                </ul>
+            </li>
+        </ol>
     
         <!--Sevdiğim Dizi-->
         <h3>Sevdiğim Dizi: My Name </h3>
+        <img src="https://guneykoresinemasi.com/uploads/posts/2021-09/1632759182_my-name1.jpg" alt="Dizi Posteri" style="width:350px;height:350px;">
         <p> 
             Dizi, babasının ölümüyle ilgili gerçeği öğrenmek için bir organize suç çetesine katılan Yoon Ji-Woo’nun (Han So-Hee) etrafında dönmektedir. Yoon Ji-Woo, uyuşturucu karteli olan Dongcheonpa için çalışmaktadır. Babasının ölüm nedenini ortaya çıkarmak için Dongcheonpa’nın köstebeği olur ve polis departmanındaki uyuşturucu araştırma biriminde çalışmaya başlar.
         </p>
-</body>
+    </body>
 </html>
